[metadata]
name = ssh-audit
version = attr: ssh_audit.globals.VERSION
author = Joe Testa
author_email = jtesta@positronsecurity.com
description = An SSH server & client configuration security auditing tool
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/jtesta/ssh-audit
project_urls =
    Source Code = https://github.com/jtesta/ssh-audit
    Bug Tracker = https://github.com/jtesta/ssh-audit/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Security
    Topic :: Security :: Cryptography

[options]
packages = find:
package_dir =
     = src
python_requires = >=3.8,<4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ssh-audit = ssh_audit.ssh_audit:main
